# packurl

./: LICENSE.md  README.md  brotli.wasm  brotli_decompress.wasm  bundle.mjs  darcula.js  editor-bundle.mjs  editor-bundle.mjs.map  editor.mjs  font.css  index.html  new.html  q85.mjs
.github/workflows/: pages.yml
rust/: instructions.adoc
rust/brotli/: Cargo.toml
rust/brotli/src/: lib.rs
rust/brotli_decompress/: Cargo.toml
rust/brotli_decompress/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
server/www/: 414.html  index.html  pwa.json
server2/: Cargo.toml  packurl.service
server2/src/: 414.html  acme.rs  cache.rs  domains.rs  fav.ico.br  handlers.rs  jose.rs  log.rs  main.rs  pwa.json  resolver.rs  response.rs  tls.rs
server2/src/acme/: cache.rs  handler.rs  jose.rs  mod.rs
server2/src/apex/: 414.html.br  handler.rs  mod.rs  pwa.json.br
server2/src/cdn/: cache.rs  handler.rs  mod.rs  path.rs
server2/src/local/: handler.rs  mod.rs
server2/src/tls/: mod.rs  resolver.rs
tests/: data.html  data.html.br  q85_test.js
www/: 404.html  414.html  about.html  index.html  service-worker.js
