[package]
name = "packurl"
version = "0.1.0"
authors = ["Jerome David"]
edition = "2021"

[dependencies.tokio]
version = "1.21.2"
features = [ "full" ]

[dependencies.tokio-rustls]
version = "0.23.4"

[dependencies.rcgen]
version = "0.10.0"

[dependencies.pem]
version = "1.1.0"

[dependencies.ring]
version = "0.16.20"

[dependencies.rustls]
version = "0.20.7"

[dependencies.serde]
version = "1.0.147"
features = [ "derive" ]

[dependencies.serde_json]
version = "1.0.87"

[dependencies.base64]
version = "0.13.1"

[dependencies.reqwest]
version = "0.11.12"
features = [ "json", "rustls-tls" ]
default-features = false

[dependencies.brotli]
version = "3.3.4"

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.colored]
version = "2.0.0"

[dependencies.const-str]
version = "0.5.2"
