[package]
name = "brotli"
version = "0.1.0"
authors = ["Jerome David"]
edition = "2021"

[lib]
crate-type = ["cdylib","rlib"]

[features]
#default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
#console_error_panic_hook = "0.1"
wee_alloc = "0.4"
brotli = "3.3"

[profile.release]
opt-level = "s"
lto = true
